better configuration handling